# idgames-data

./: README.md  pyproject.toml
idgames/: README.md  __init__.py  api.py  cli.py  wad.py
