[tool.poetry]
name = "doomai"
version = "0.1.0"
description = "Python code for applying AI to Doom"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
readme = "README.md"
packages = [{include = "scrape"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
