[tool.poetry]
name = "idgames"
version = "0.1.0"
description = "Codebase for data mining /idgames"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
readme = "README.md"
packages = [{include = "idgames"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
click = "^8.1.3"
pillow = "^9.3.0"
numpy = "^1.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
